css/results: Ellipsis and prevent text wrapping

--- a/resources/css/results.less
+++ b/resources/css/results.less
@@ -12,7 +12,11 @@
 .sresults table td {
   font-size: floor(@font-size-base * 1.15);
   font-weight: 200;
-  text-overflow: ellipsis; // Ellipsise overflow
+
+  // Ellipsise overflow:
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 // Table widths
